Task: Creando Date: 01-03-2025 Versión: 1.1

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,14 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+#Others
+!/.env
+!/postgres-data/
+!/.idea/
+!/.prettierrc
+postgres-data/
+.idea
+.prettierrc
+.env
+.next!/postgres-data/
