--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "next-global-dashboard",
-    "version": "0.1.0",
+    "version": "0.1.1",
     "private": true,
     "prisma": {
         "seed": "node prisma/seed.js"
@@ -37,6 +37,7 @@
         "bcrypt": "^5.1.1",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "cmdk": "^1.1.1",
         "lucide-react": "^0.476.0",
         "next": "15.1.7",
         "next-auth": "^4.24.11",
@@ -57,6 +58,7 @@
         "@tailwindcss/postcss": "^4.0.8",
         "@types/bcrypt": "^5.0.2",
         "@types/node": "^20",
+        "@types/nodemailer": "^6.4.17",
         "@types/react": "^19",
         "@types/react-dom": "^19",
         "postcss": "^8",
