--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "postinstall": "prisma generate"
     },
     "dependencies": {
+        "@getbrevo/brevo": "^2.2.0",
         "@prisma/client": "^6.5.0",
         "@radix-ui/react-alert-dialog": "^1.1.6",
         "@radix-ui/react-avatar": "^1.1.3",
