Task: Create Edit Delete Tcikets Date: 28-03-2025 Versión: 1.6

--- a/components.json
+++ b/components.json
@@ -12,8 +12,11 @@
     },
     "aliases": {
         "components": "@/components",
-        "utils": "@/lib/utils",
         "ui": "@/components/ui",
+        "actions": "@/actions",
+        "types": "@/types",
+        "store": "@/store",
+        "utils": "@/lib/utils",
         "lib": "@/lib",
         "hooks": "@/hooks"
     },
