--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     },
     "scripts": {
         "dev": "next dev --turbopack",
-        "build": "next build",
+        "build": "NODE_NO_WARNINGS=1 next build",
         "start": "next start",
         "lint": "biome lint .",
         "format": "biome format . --write",
@@ -32,13 +32,20 @@
         "@radix-ui/react-select": "^2.1.6",
         "@radix-ui/react-separator": "^1.1.2",
         "@radix-ui/react-slot": "^1.1.2",
+        "@radix-ui/react-toggle": "^1.1.2",
         "@radix-ui/react-tooltip": "^1.1.8",
         "@tanstack/react-table": "^8.21.2",
+        "@tiptap/extension-highlight": "^2.11.6",
+        "@tiptap/extension-text-align": "^2.11.6",
+        "@tiptap/pm": "^2.11.6",
+        "@tiptap/react": "^2.11.6",
+        "@tiptap/starter-kit": "^2.11.6",
         "@vercel/blob": "^0.27.2",
         "bcrypt": "^5.1.1",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cmdk": "^1.1.1",
+        "html-react-parser": "^5.2.2",
         "lucide-react": "^0.476.0",
         "next": "15.1.7",
         "next-auth": "^4.24.11",
