--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,7 @@
             "@/lib/*": ["./src/lib/*"],
             "@/store/*": ["./src/store/*"],
             "@/data/*": ["./src/data/*"],
-            "@/hooks/*": ["./src/hooks/*"],
+            "@/hooks/*": ["./src/hooks/*"]
         }
     },
     "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
