--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
         "bun:postinstall": "bun prisma generate"
     },
     "dependencies": {
+        "@dnd-kit/core": "^6.3.1",
+        "@dnd-kit/modifiers": "^9.0.0",
+        "@dnd-kit/sortable": "^10.0.0",
         "@getbrevo/brevo": "^2.2.0",
         "@prisma/client": "^6.5.0",
         "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -55,6 +58,8 @@
         "clsx": "^2.1.1",
         "cmdk": "^1.1.1",
         "html-react-parser": "^5.2.3",
+        "jspdf": "^3.0.1",
+        "jspdf-autotable": "^5.0.2",
         "lucide-react": "^0.487.0",
         "next": "15.2.4",
         "next-auth": "^4.24.11",
