--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,6 @@
             "@/hooks/*": ["./src/hooks/*"]
         }
     },
-    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "prisma/seed.js"],
     "exclude": ["node_modules"]
 }
