--- a/biome.json
+++ b/biome.json
@@ -8,7 +8,7 @@
         "rules": {
             "recommended": true,
             "correctness": {
-                "noUnusedImports": "error",
+                "noUnusedImports": "warn",
                 "noUnusedVariables": "warn"
             },
             "suspicious": {
