Task: Implementando Nuevo Form Date: 07-07-2025 Versión: 3.5

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "nextjs-barcodepapel",
-    "version": "0.1.0",
+    "name": "nextjs-dashboard-global",
+    "version": "0.1.2",
     "private": true,
     "type": "module",
     "prisma": {
