--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
         "build": "next build",
         "start": "next start",
         "lint": "biome lint .",
-        "sort-tw": "rustywind --write .",
         "clean": "rm -rf .next && npm run build",
         "delete": "rm -rf .next",
         "preview": "next build && next start",
@@ -21,8 +20,6 @@
         "bun:build": "NODE_NO_WARNINGS=1 bun --bun next build",
         "bun:start": "bun --bun next start",
         "bun:lint": "bun run biome lint .",
-        "bun:format": "bun run biome format . --write",
-        "bun:sort-tw": "bun run rustywind --write .",
         "bun:clean": "rm -rf .next && bun run build",
         "bun:preview": "bun run build && bun run start",
         "bun:postinstall": "bun prisma generate",
@@ -33,6 +30,7 @@
         "@dnd-kit/modifiers": "^9.0.0",
         "@dnd-kit/sortable": "^10.0.0",
         "@getbrevo/brevo": "^2.2.0",
+        "@google-analytics/data": "^5.2.0",
         "@prisma/client": "^6.8.2",
         "@radix-ui/react-alert-dialog": "^1.1.6",
         "@radix-ui/react-avatar": "^1.1.3",
@@ -79,7 +77,9 @@
         "react-hook-form": "^7.55.0",
         "react-leaflet": "^5.0.0",
         "react-spinners": "^0.15.0",
+        "recharts": "^3.1.0",
         "sonner": "^2.0.3",
+        "swr": "^2.3.4",
         "tailwind-merge": "^3.1.0",
         "tailwindcss-animate": "^1.0.7",
         "xlsx": "^0.18.5",
