--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "build": "next build",
         "start": "next start",
         "lint": "biome lint .",
+        "format": "prettier --write .",
         "clean": "rm -rf .next && npm run build",
         "delete": "rm -rf .next",
         "preview": "next build && next start",
@@ -31,6 +32,7 @@
         "@dnd-kit/sortable": "^10.0.0",
         "@getbrevo/brevo": "^2.2.0",
         "@google-analytics/data": "^5.2.0",
+        "@hookform/resolvers": "^5.2.0",
         "@prisma/client": "^6.8.2",
         "@radix-ui/react-alert-dialog": "^1.1.6",
         "@radix-ui/react-avatar": "^1.1.3",
@@ -56,6 +58,7 @@
         "@tiptap/react": "^2.11.7",
         "@tiptap/starter-kit": "^2.11.7",
         "@types/leaflet": "^1.9.18",
+        "@types/react-dropzone": "^5.1.0",
         "@vercel/blob": "^0.27.3",
         "bcrypt": "^5.1.1",
         "class-variance-authority": "^0.7.1",
@@ -83,6 +86,7 @@
         "tailwind-merge": "^3.1.0",
         "tailwindcss-animate": "^1.0.7",
         "xlsx": "^0.18.5",
+        "zod": "^4.0.10",
         "zustand": "^5.0.5"
     },
     "devDependencies": {
