--- a/package.json
+++ b/package.json
@@ -42,10 +42,11 @@
         "@radix-ui/react-dropdown-menu": "^2.1.6",
         "@radix-ui/react-label": "^2.1.2",
         "@radix-ui/react-popover": "^1.1.6",
+        "@radix-ui/react-progress": "^1.1.7",
         "@radix-ui/react-scroll-area": "^1.2.3",
         "@radix-ui/react-select": "^2.1.6",
         "@radix-ui/react-separator": "^1.1.2",
-        "@radix-ui/react-slot": "^1.1.2",
+        "@radix-ui/react-slot": "^1.2.3",
         "@radix-ui/react-tabs": "^1.1.12",
         "@radix-ui/react-toggle": "^1.1.2",
         "@radix-ui/react-tooltip": "^1.1.8",
@@ -76,6 +77,7 @@
         "nodemailer": "^6.10.0",
         "prisma-client": "^0.0.0",
         "react": "^19.1.0",
+        "react-day-picker": "^9.8.1",
         "react-dom": "^19.1.0",
         "react-hook-form": "^7.55.0",
         "react-leaflet": "^5.0.0",
