--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
         "@radix-ui/react-tabs": "^1.1.12",
         "@radix-ui/react-toggle": "^1.1.2",
         "@radix-ui/react-tooltip": "^1.1.8",
+        "@react-email/components": "^0.3.3",
+        "@react-email/render": "^1.1.4",
         "@tanstack/react-table": "^8.21.2",
         "@tiptap/extension-highlight": "^2.11.7",
         "@tiptap/extension-image": "^2.14.0",
@@ -79,6 +81,7 @@
         "react": "^19.1.0",
         "react-day-picker": "^9.8.1",
         "react-dom": "^19.1.0",
+        "react-email": "^4.2.5",
         "react-hook-form": "^7.55.0",
         "react-leaflet": "^5.0.0",
         "react-spinners": "^0.15.0",
