Task: Creación archivo config claude Date: 02-08-2025 Versión: 4.1

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,7 @@ yarn-error.log*
 # Prisma
 prisma/migrations/
 prisma/sql/
+
+# Claude Code configuración personal
+.claude/settings.local.json
+dev.log
